[package]
name = "qubit-atomic"
version = "0.14.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-atomic"
description = "User-friendly atomic operations wrapper providing JDK-like atomic API"
homepage = "https://github.com/qubit-ltd/rs-atomic"
documentation = "https://docs.rs/qubit-atomic"
readme = "README.md"
keywords = ["atomic", "concurrent", "lock-free", "thread-safe", "qubit"]
categories = ["concurrency", "data-structures"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_atomic"

[dependencies]
arc-swap = "1.9"
portable-atomic = "1.13"

[dev-dependencies]
# For statistically robust benchmark comparisons
criterion = { version = "0.8", features = ["html_reports"] }
# For concurrent model checking
loom = "0.7"

[[bench]]
name = "atomic_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
